--- a/src/main/webapp/AnimaPackage-Web-ljU3w/adminpageuser.html
+++ b/src/main/webapp/AnimaPackage-Web-ljU3w/adminpageuser.html
@@ -50,7 +50,7 @@
                             <div class="u83dcu5355u7126u70b9">
                             </div>
                         </div>
-                        <div class="framemenuclose">
+                    ww    <div class="framemenuclose">
                             <div class="background">
                             </div>
                             <img anima-src="./img/admin-page-user-u83dcu5355u72b6u6001@2x.png" class="u83dcu5355u72b6u6001" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="/>
